--- a/index.html
+++ b/index.html
@@ -620,8 +620,9 @@
               <div class="ct-address">
                 <span>Address:</span>
                 <p>
-                  Alliance Française d'Accra <br />South liberation Link Accra,
-                  Greater Accra Region
+                  Serenity House Ghana <br />29 Senchi Street Airport
+                  Residential, <br />
+                  Accra - Ghana
                 </p>
               </div>
               <ul>
@@ -643,7 +644,7 @@
           <div class="col-lg-6">
             <div class="cs-map">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d992.6920460529433!2d-0.1907405!3d5.6012256!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9afbe05e0f0f%3A0xf1dd101d9edb28e8!2sAlliance%20Fran%C3%A7aise%20d&#39;Accra!5e0!3m2!1sen!2sgh!4v1695997771686!5m2!1sen!2sgh"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.6677484183715!2d-0.18293812479486726!3d5.615983333043172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9b70d73669c3%3A0xfa97fa61453dfd6e!2sSerenity%20House%20Ghana!5e0!3m2!1sen!2sgh!4v1709584582331!5m2!1sen!2sgh"
                 width="600"
                 height="450"
                 style="border: 0"
