first set of updates done

--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
                 <div class="col-lg-6">
                   <div class="si-text">
                     <div class="si-title">
-                      <h4>Stacey Nzingha Hil</h4>
+                      <h4>Stacy Nzinga Hill</h4>
                       <span> Guest Speaker</span>
                     </div>
 
                     <p>
-                      Stacey Nzingha Hil, a Chicago native, holds degrees in
+                      Stacy Nzinga Hill, a Chicago native, holds degrees in
                       Political Science and African-American Studies. As an
                       educator, she's co-founded influential organizations like
                       the Chicago Grassroots Curriculum Taskforce. Her teaching
                       career spans Chicago and Philadelphia, where she focuses
-                      on curriculum development. Stacey has led professional
+                      on curriculum development. Stacy has led professional
                       developments for educational institutions and participated
                       in global programs, including in West Africa. Currently,
                       she serves as the Curriculum Coordinator for the American
@@ -466,14 +466,11 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Helen Johnson</h4>
-                      <span>Keynote Speaker</span>
+                      <span> Residential  Resource Expert</span>
                     </div>
 
                     <p>
-                      AfroCrowns will immerse in the Ghanaian community through
-                      a vibrant social campaign, celebrating and broadcasting
-                      attendees' stories, weaving the tapestry of
-                      intergenerational "Afro-Identity.".
+                    Helen is our Residential Resource Expert having more than 30 years of Hair industry experience.
                     </p>
                   </div>
                 </div>
