--- a/speaker.html
+++ b/speaker.html
@@ -215,10 +215,9 @@
               <p>
                 Akosua and Associates is pleased to invite all enthusiasts and
                 lovers of African hair and beauty to the AfroCrowns Hair and
-                Beauty Festival conference, which will be held in Accra on
-                Saturday, 16th December, 2023. This event also offers an
-                optional tour package for non-Ghanaians visiting during December
-                2023. Ask us about tour availability.
+                Beauty Festival conference, which will be held at the Serenity House Ghana
+                Airport Residential - 29 Senchi Street, on
+                Saturday, 9th March, 2024. 
               </p>
               <p>
                 AfroCrowns is a day event that aims to showcase the uniqueness
