--- a/speaker.html
+++ b/speaker.html
@@ -274,7 +274,7 @@
           </div>
         </div>
       </div>
-      <div class="member-item set-bg" data-setbg="img/team-member/member-2.jpg">
+      <div class="member-item set-bg" data-setbg="img/team-member/hair-demo.jpeg">
         <div class="mi-social">
           <div class="mi-social-inner bg-gradient">
             <a href="#"><i class="fa fa-facebook"></i></a>
