--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -184,7 +185,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Rachael Sealy</h4>
-                      <span>Featuring Special Guest Speaker</span>
+                      <span>Virtual Presenters</span>
                     </div>
 
                     <p>
@@ -245,28 +246,23 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="si-pic">
-                    <img src="img/speakers/new.jpeg" alt="" />
+                    <img src="img/speakers/Sha.jpeg" alt="" />
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="si-text">
                     <div class="si-title">
-                      <h4>Angela</h4>
-                      <span>Speaker</span>
+                      <h4>Shaakira Olabisi Raheem</h4>
+                      <span>Double Dutch Master</span>
                     </div>
 
                     <p>
-                      Angela began her loc journey when her late husband was
-                      terminally ill. At the time it was more about convenience
-                      as she had less and less time to deal with her hair but
-                      also wanted a style that was healthy and beautiful. As a
-                      locked sister, the journey has gone from a need for
-                      convenience to being an authentic statement for her 3
-                      daughters who also embrace the beautiful natural hair.
-                      Embracing the varied styles that come with it, Angela is
-                      content in sharing her loc journey in both her
-                      professional and personal life and hope to see more women
-                      of color embrace their natural and diverse beauty.
+                      Shaakira has served in various capacities around the globe
+                      as a light reflector, educational leader, mindfulness
+                      coach, mentor, and yoga guide. Currently grounding in
+                      Ghana where she aspires to cultivate the youth through
+                      education, the land through farming, and the community
+                      through wellness
                     </p>
                   </div>
                 </div>
@@ -274,35 +270,6 @@
             </div>
           </div>
 
-          <div class="col-sm-6">
-            <div class="speaker-item">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="si-pic">
-                    <img src="img/speakers/audrey.jpeg" alt="" />
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="si-text">
-                    <div class="si-title">
-                      <h4>Audrey Asante</h4>
-                      <span>Panelist</span>
-                    </div>
-
-                    <p>
-                      My name is Audrey Asante. I am a second year computer
-                      engineering student. I am student ambassador and the
-                      computer engineering representative for my batch in the
-                      General assembly. I am also an executive in the retract
-                      club. As a black woman in STEM I am a strong advocate for
-                      Women in STEM...and I believe that Natural Hair is the way
-                      for me.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
 
           <div class="col-sm-6">
             <div class="speaker-item">
@@ -327,6 +294,73 @@
               </div>
             </div>
           </div>
+
+
+           <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/Lisa.jpeg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Lisa Maria Gertrudis Valcarcel Obiang</h4>
+                      <span>Speaker</span>
+                    </div>
+
+                    <p>
+                      Free, creative, dynamic and positive, dancing to the
+                      rhythm of my own drums that direct me towards my path,
+                      completing my major in Advertising & PR is just the
+                      beginning of the journey, it goes on as the purpose is to
+                      change the wrong narratives and misconceptions about
+                      Africa by exposing and embracing the diversity within its
+                      cultures, richness of its history and strength of its
+                      people, taking advantage of this digital era that
+                      facilitates globalization to expose to the world the
+                      shadowed beauty of Africa.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          
+          <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/audrey.jpeg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Audrey Asante</h4>
+                      <span>Panelist</span>
+                    </div>
+
+                    <p>
+                       Audrey is a second year computer
+                      engineering student. She is also a  student ambassador and the
+                      computer engineering representative for her batch in the
+                      General assembly. Audrey is also an executive in the retract
+                      club. As a black woman in STEM she is a strong advocate for
+                      Women in STEM...and she believes that Natural Hair is the way
+                      for me.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -355,6 +389,60 @@
                       heart. Additionally, Isabel serves as a research
                       assistant, contributing to the advancement of knowledge in
                       her field
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/christel.jpeg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Sigrid Bruce-Cathlin</h4>
+                      <span>Panelist</span>
+                    </div>
+
+                    <p>
+                     Bio upcoming
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/christel.jpeg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Christelle Kattenstroth</h4>
+                      <span>Panelist</span>
+                    </div>
+
+                    <p>
+                      Christelle is a dedicated student pursuing
+                      Entrepreneurship and Leadership. She is also an
+                      accomplished international model. In addition to her
+                      academic pursuits, she stands as a proud ambassador for
+                      natural hair, promoting authenticity and self-expression.
+                      Christelle's journey is a harmonious blend of leadership,
+                      business acumen and a commitment to celebrating
+                      individuality.
                     </p>
                   </div>
                 </div>
@@ -426,34 +514,24 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="si-pic">
-                    <img src="img/speakers/Lisa.jpeg" alt="" />
+                    <img src="img/speakers/Zanetta.jpeg" alt="" />
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="si-text">
                     <div class="si-title">
-                      <h4>Lisa Maria Gertrudis Valcarcel Obiang</h4>
-                      <span>Speaker</span>
+                      <h4>Zanetta Crentsil</h4>
+                      <span>Panelist</span>
                     </div>
 
-                    <p>
-                      Free, creative, dynamic and positive, dancing to the
-                      rhythm of my own drums that direct me towards my path,
-                      completing my major in Advertising & PR is just the
-                      beginning of the journey, it goes on as the purpose is to
-                      change the wrong narratives and misconceptions about
-                      Africa by exposing and embracing the diversity within its
-                      cultures, richness of its history and strength of its
-                      people, taking advantage of this digital era that
-                      facilitates globalization to expose to the world the
-                      shadowed beauty of Africa.
-                    </p>
+                    <p>Bio upcoming</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
+         
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -466,11 +544,12 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Helen Johnson</h4>
-                      <span> Residential  Resource Expert</span>
+                      <span> Residential Resource Expert</span>
                     </div>
 
                     <p>
-                    Helen is our Residential Resource Expert having more than 30 years of Hair industry experience.
+                      Helen is our Residential Resource Expert having more than
+                      30 years of Hair industry experience.
                     </p>
                   </div>
                 </div>
@@ -489,7 +568,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Paris Lizana</h4>
-                      <span>Speaker</span>
+                      <span>Virtual Presenters</span>
                     </div>
 
                     <p>
@@ -553,7 +632,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Kudjo Asamoah</h4>
-                      <span>Speaker</span>
+                      <span>Virtual Presenters</span>
                     </div>
 
                     <p>
@@ -582,7 +661,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Yusif Aminu</h4>
-                      <span>Speaker</span>
+                      <span>Hair Demonstrations</span>
                     </div>
 
                     <p>
