--- a/index.html
+++ b/index.html
@@ -396,29 +396,8 @@
             </div>
           </div>
 
-          <div class="col-sm-6">
-            <div class="speaker-item">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="si-pic">
-                    <img src="img/speakers/christel.jpeg" alt="" />
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="si-text">
-                    <div class="si-title">
-                      <h4>Sigrid Bruce-Cathlin</h4>
-                      <span>Panelist</span>
-                    </div>
+        
 
-                    <p>
-                     Bio upcoming
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -509,6 +488,30 @@
             </div>
           </div>
 
+            <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/sig.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Sigrid Bruce-Cathlin</h4>
+                      <span>Panelist</span>
+                    </div>
+
+                    <p>
+                     Bio upcoming
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -568,7 +571,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Paris Lizana</h4>
-                      <span>Virtual Presenters</span>
+                      <span>Virtual Presenter</span>
                     </div>
 
                     <p>
@@ -632,7 +635,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Kudjo Asamoah</h4>
-                      <span>Virtual Presenters</span>
+                      <span>Virtual Presenter</span>
                     </div>
 
                     <p>
