--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>Dr. Wanida Lewis</h4>
-                      <span>Keynote Speaker</span>
+                      <span> Speaker</span>
                     </div>
 
                     <p>
