--- a/index.html
+++ b/index.html
@@ -492,6 +492,38 @@
             </div>
           </div>
 
+           <div class="col-sm-6">
+            <div class="speaker-item">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="si-pic">
+                    <img src="img/speakers/speaker-5.jpeg" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="si-text">
+                    <div class="si-title">
+                      <h4>Yusif Aminu</h4>
+                      <span>Hair Demonstrations</span>
+                    </div>
+
+                    <p>
+                      Yusif Aminu brings over five years of experience in the
+                      beauty salon industry. Based in Accra, he specializes in
+                      various services, including re-twisting, re-locking,
+                      repairing damaged hair, and assisting with hair regrowth.
+                      His dedication extends beyond serving clients, as he also
+                      actively engages in upskilling and training others in the
+                      field. Learning under the tutelage of Mr. Y LOCS has
+                      provided Yusif with a remarkable advantage in building his
+                      own career and pursuing excellent job opportunities.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-sm-6">
             <div class="speaker-item">
               <div class="row">
@@ -703,7 +735,7 @@
                   <div class="si-text">
                     <div class="si-title">
                       <h4>QUEENDALINI NIA</h4>
-                      <span>Speaker</span>
+                      <span>Virtual Presenter</span>
                     </div>
 
                     <p>
@@ -726,37 +758,7 @@
             </div>
           </div>
          
-          <div class="col-sm-6">
-            <div class="speaker-item">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="si-pic">
-                    <img src="img/speakers/speaker-5.jpeg" alt="" />
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="si-text">
-                    <div class="si-title">
-                      <h4>Yusif Aminu</h4>
-                      <span>Hair Demonstrations</span>
-                    </div>
-
-                    <p>
-                      Yusif Aminu brings over five years of experience in the
-                      beauty salon industry. Based in Accra, he specializes in
-                      various services, including re-twisting, re-locking,
-                      repairing damaged hair, and assisting with hair regrowth.
-                      His dedication extends beyond serving clients, as he also
-                      actively engages in upskilling and training others in the
-                      field. Learning under the tutelage of Mr. Y LOCS has
-                      provided Yusif with a remarkable advantage in building his
-                      own career and pursuing excellent job opportunities.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+         
         </div>
       </div>
     </section>
